// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-stacked-bar-widget Propery handling should handle data attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    />
  </svg>
  <as-y-axis
    from="0"
    to="0"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle description attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  description="fake-description-attr"
>
  
  <as-widget-header
    subheader="fake-description-attr"
  />
  <svg>
    <g
      class="plot"
    />
  </svg>
  <as-y-axis
    from="0"
    to="0"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle heading attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  heading="fake-heading-attr"
>
  
  <as-widget-header
    header="fake-heading-attr"
  />
  <svg>
    <g
      class="plot"
    />
  </svg>
  <as-y-axis
    from="0"
    to="0"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle showLegend attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  show-legend="false"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    />
  </svg>
  <as-y-axis
    from="0"
    to="0"
  />
  
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle valuesInfo attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <as-widget-header />
  <svg>
    <g
      class="plot"
    />
  </svg>
  <as-y-axis
    from="0"
    to="0"
  />
  <p>
    legend
  </p>
</as-stacked-bar-widget>
`;
